# routes/index.js
@@ -2,6 +2,6 @@ const express = require("express");
 const router = express.Router();
 
 router.use("/cakes", require("./cakes"));
-// router.use('/breads', require('./breads')); // Para cuando crees la segunda colección
+router.use("/breads", require("./breads"));
 
 module.exports = router;
